<resources>
    <string name="app_name">SQLite</string>

    <string name="update_data">Update data</string>
    <string name="add">Add</string>
    <string name="person_name">Person Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="insert_data">Insert Data</string>
    <string name="cancel">Cancel</string>
    <string name="add_update_person_details">Add/Update Person Details</string>
    <string name="occupation">Occupation</string>
    <string name="deleted_success">Person deleted successfully</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_occupation">Please enter occupation</string>
    <string name="enter_phone">Please enter phone</string>
    <string name="enter_emailid">Please enter email address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
</resources>
